# block-game-clone-backend

./: .gitignore  Cargo.toml  README.md
block-game-clone-backend/: Cargo.toml
block-game-clone-backend/src/: board.rs  board_state.rs  game_mode.rs  game_state.rs  hand.rs  lib.rs  piece.rs  player.rs  player_hand_state.rs  player_state.rs  ts_interop.rs  utils.rs
build_automation/: Cargo.toml  README.md
build_automation/src/: main.rs
build_wasm_ts_module/: Cargo.toml
build_wasm_ts_module/src/: lib.rs  main.rs
embedded/: Cargo.toml  README.md  TUTORIAL_README.md
embedded/.cargo/: config.toml
embedded/src/: main.rs
game_logic/: Cargo.toml
game_logic/src/: action.rs  board.rs  board_state.rs  game_state.rs  lib.rs  piece.rs  player_hand_state.rs  player_state.rs  rotation_axis.rs
src/: board.rs  board_state.rs  game_mode.rs  game_state.rs  greedy_ai.rs  hand.rs  lib.rs  piece.rs  player.rs  player_hand_state.rs  player_state.rs  ts_interop.rs
wasm_build_automation/: add_types.js  build.sh
wasm_build_automation/build_automation/src/: main.rs
wasm_build_automation/generate_index/: Cargo.toml  README.md
wasm_build_automation/generate_index/src/: main.rs
