[package]
name = "block-game-clone-backend"
version = "0.1.30"
authors = ["Ethan Samuels-Ellingson <ethansamuelsellingson@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
ts-rs = "6.2"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
serde_json = "1.0.103"
serde = { version = "1.0", features = ["derive"] }
nalgebra = { version = "0.32.3", features = ["serde-serialize"] }
itertools = "0.11.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
