[package]
name = "block-game-clone-backend"
version = "0.1.35"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"
ts-rs = "6.2"

serde_json = { version = "*", default-features = false, features = ["alloc"] }
serde = { version = "*", default-features = false, features = [
    "alloc",
    "derive",
] }
nalgebra = { version = "*", default-features = false, features = [
    "alloc",
    "libm",
    "serde-serialize-no-std",
] }
itertools = "0.11.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
