[package]
name = "block-game-clone-backend"
version = "0.1.35"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
ts-interop = ["dep:wasm-bindgen", "dep:ts-rs"]

[dependencies]
ts-rs = { version = "6.2", optional = true }
wasm-bindgen = { version = "0.2.84", optional = true }

serde = { version = "*", default-features = false, features = [
    "alloc",
    "derive",
] }
nalgebra = { version = "*", default-features = false, features = [
    "alloc",
    "libm",
    "serde-serialize-no-std",
] }

itertools = { version = "0.11.0", default-features = false }
serde-json-core = { version = "0.5.1", default-features = false, features = [
    "heapless",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
