[package]
name = "build_wasm_ts_module"
version = "0.1.36"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.104"
wasm-bindgen = "0.2.84"
game_logic = { path = "../game_logic" }
